# gh-project-manager-mcp

./: .coveragerc  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  Makefile  README.md  pyproject.toml  test-file-test-pr-1746367216-d4771df5.md  test-file-test-pr-1746367287-5e40d524.md  test-file-test-pr-1746367373-d9eb0950.md  test-file-test-pr-1746367459-95ee83cb.md  test-file-test-pr-1746367546-f0fa870b.md  test-file-test-pr-1746367632-ec22a3a4.md
.cursor/rules/: debugging.mdc  general.mdc  task-list.mdc  testing.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-publish.yml  feature-branch-ci.yml  integration-tests.yml
src/: config.py  server.py
src/gh_project_manager_mcp/: __init__.py  __main__.py  config.py  server.py  stdio_server.py
src/gh_project_manager_mcp/tools/: __init__.py  issues.py  projects.py  pull_requests.py
src/gh_project_manager_mcp/utils/: __init__.py  config.py  error.py  gh_utils.py  response_handler.py
tasks/: TEST_REFACTOR.md  gh_issue_tasks.md  gh_pr_tasks.md  gh_project_tasks.md
tests/: __init__.py  conftest.py  test_config.py  test_server.py
tests/integration/: __init__.py  conftest.py  test_github_cli.py  test_issues_integration.py  test_projects_integration.py  test_pull_requests_integration.py  test_server_health.py  test_simple_call.py
tests/tools/: test_issues.py  test_projects.py  test_pull_requests.py
tests/unit/: __init__.py  test_config.py  test_server.py
tests/unit/tools/: __init__.py  test_issues.py  test_projects.py  test_pull_requests.py
tests/unit/utils/: test_gh_utils.py
tests/utils/: test_gh_utils.py  test_gh_utils.py.bak
